--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,14 +15,14 @@ jobs:
         with:
           python-version: '3.9'
 
-      - name: Install Dependencies
-        run: pip install -r requirements.txt -t ./package
+      # - name: Install Dependencies
+      #   run: pip install -r requirements.txt -t ./package
 
       - name: Create Bundle
         run: |
-          cd package
-          zip -r ../code.zip .
-          cd ..
+          # cd package
+          # zip -r ../code.zip .
+          # cd ..
           zip -g code.zip delta.py airports.json deltaAcronym.json
 
       - name: Configure AWS Credentials
