--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,10 +20,8 @@ jobs:
 
       - name: Create Bundle
         run: |
-          # cd package
-          # zip -r ../code.zip .
-          # cd ..
-          zip -g code.zip delta.py #airports.json deltaAcronym.json
+          # zip -r code.zip ./package
+          zip -g code.zip delta.py airports.json deltaAcronym.json
 
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v1
@@ -32,8 +30,6 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_KEY }}
           aws-region: us-east-1
 
-      - name: Upload Archive
-        uses: actions/upload-artifact@v3
-        with:
-          name: zip
-          path: code.zip
+      - name: Upload to AWS Lambda
+        run:  aws lambda update-function-code --function-name Airport-Code-Bot --zip-file fileb://code.zip > /dev/null 
+        
